--- a/notebooks/BAE305_Python_HW_Notebook/PY0101EN-1-2-Strings.ipynb
+++ b/notebooks/BAE305_Python_HW_Notebook/PY0101EN-1-2-Strings.ipynb
@@ -812,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -820,7 +820,7 @@
    "source": [
     "# Write your code below and press Shift+Enter to execute \n",
     "\n",
-    "A = \"1\""
+    "A = \"1\"\n"
    ]
   },
   {
@@ -874,15 +874,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# Write your code below and press Shift+Enter to execute \n",
+    "A=1\n",
+    "B=2\n",
     "\n",
-    "C = A + B"
+    "C = A + B\n",
+    "\n"
    ]
   },
   {
@@ -912,15 +915,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ABC\n"
+     ]
+    }
+   ],
    "source": [
     "# Write your code below and press Shift+Enter to execute\n",
     "\n",
-    "D = \"ABCDEFG\""
+    "D = \"ABCDEFG\"\n",
+    "print(D[:3])"
    ]
   },
   {
@@ -952,15 +964,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "correct\n"
+     ]
+    }
+   ],
    "source": [
     "# Write your code below and press Shift+Enter to execute\n",
     "\n",
-    "E = 'clocrkr1e1c1t'"
+    "E = 'clocrkr1e1c1t'\n",
+    "print(E[::2])"
    ]
   },
   {
@@ -990,13 +1011,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " \\ \n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code below and press Shift+Enter to execute"
+    "# Write your code below and press Shift+Enter to execute\n",
+    "print(r\" \\ \")"
    ]
   },
   {
@@ -1027,15 +1057,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'YOU ARE WRONG'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Write your code below and press Shift+Enter to execute\n",
     "\n",
-    "F = \"You are wrong\""
+    "F = \"You are wrong\"\n",
+    "F.upper()"
    ]
   },
   {
@@ -1065,17 +1107,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "95"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Write your code below and press Shift+Enter to execute\n",
     "\n",
     "G = \"Mary had a little lamb Little lamb, little lamb Mary had a little lamb \\\n",
     "Its fleece was white as snow And everywhere that Mary went Mary went, Mary went \\\n",
-    "Everywhere that Mary went The lamb was sure to go\""
+    "Everywhere that Mary went The lamb was sure to go\"\n",
+    "G.find(\"snow\")"
    ]
   },
   {
@@ -1098,13 +1152,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Bob had a little lamb Little lamb, little lamb Bob had a little lamb Its fleece was white as snow And everywhere that Bob went Bob went, Bob went Everywhere that Bob went The lamb was sure to go'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your code below and press Shift+Enter to execute"
+    "# Write your code below and press Shift+Enter to execute\n",
+    "G.replace(\"Mary\",\"Bob\")"
    ]
   },
   {
@@ -1178,7 +1244,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
