--- a/notebooks/BAE305_Python_HW_Notebook/PY0101EN-1-1-Types.ipynb
+++ b/notebooks/BAE305_Python_HW_Notebook/PY0101EN-1-1-Types.ipynb
@@ -106,13 +106,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, Python!\n"
+     ]
+    }
+   ],
    "source": [
     "# Try your first Python output\n",
-    "\n",
-    "print('Hello, Python!')"
+    "print ('Hello, Python!')\n",
+    "\n"
    ]
   },
   {
@@ -157,9 +165,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.12.1 (main, Mar 17 2025, 17:13:06) [GCC 9.4.0]\n"
+     ]
+    }
+   ],
    "source": [
     "# Check the Python Version\n",
     "\n",
@@ -199,9 +215,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, Python!\n"
+     ]
+    }
+   ],
    "source": [
     "# Practice on writing comments\n",
     "\n",
@@ -238,12 +262,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'frint' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[7]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Print string as error message\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[43mfrint\u001b[49m(\u001b[33m\"\u001b[39m\u001b[33mHello, Python!\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      3\u001b[39m frint(\u001b[33m\"\u001b[39m\u001b[33mHello, Python!\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'frint' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Print string as error message\n",
-    "\n",
+    "frint(\"Hello, Python!\")\n",
     "frint(\"Hello, Python!\")"
    ]
   },
@@ -270,9 +306,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unterminated string literal (detected at line 3) (4082715811.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mprint(\"Hello, Python!)\u001b[39m\n          ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m unterminated string literal (detected at line 3)\n"
+     ]
+    }
+   ],
    "source": [
     "# Try to see build in error message\n",
     "\n",
@@ -302,9 +347,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This will be printed\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'frint' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Print string and error to see the running order\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mThis will be printed\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m \u001b[43mfrint\u001b[49m(\u001b[33m\"\u001b[39m\u001b[33mThis will cause an error\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      5\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mThis will NOT be printed\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'frint' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Print string and error to see the running order\n",
     "\n",
@@ -330,11 +394,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, world!\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code below and press Shift+Enter to execute "
+    "# Write your code below and press Shift+Enter to execute \n",
+    "print('Hello, world!')"
    ]
   },
   {
@@ -359,11 +432,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, world!\n"
+     ]
+    }
+   ],
    "source": [
-    "# Write your code below and press Shift+Enter to execute "
+    "# Write your code below and press Shift+Enter to execute \n",
+    "print('Hello, world!') #Print the traditional hello world\n"
    ]
   },
   {
@@ -498,11 +580,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "float"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your code below. Don't forget to press Shift+Enter to execute the cell"
+    "# Write your code below. Don't forget to press Shift+Enter to execute the cell\n",
+    "type(12.0)"
    ]
   },
   {
@@ -658,9 +752,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Verify that this is an integer\n",
     "\n",
@@ -706,9 +811,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Casting 1.1 to integer will result in loss of information\n",
     "\n",
@@ -969,11 +1085,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "float"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your code below. Don't forget to press Shift+Enter to execute the cell"
+    "# Write your code below. Don't forget to press Shift+Enter to execute the cell\n",
+    "type(6/2) #this is a float"
    ]
   },
   {
@@ -996,11 +1124,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your code below. Don't forget to press Shift+Enter to execute the cell"
+    "# Write your code below. Don't forget to press Shift+Enter to execute the cell\n",
+    "type(6//2)"
    ]
   },
   {
@@ -1163,11 +1303,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.6666666666666665"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your code below. Don't forget to press Shift+Enter to execute the cell"
+    "# Write your code below. Don't forget to press Shift+Enter to execute the cell\n",
+    "160/60\n",
+    "\n"
    ]
   },
   {
@@ -1373,11 +1526,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your code below. Don't forget to press Shift+Enter to execute the cell"
+    "# Write your code below. Don't forget to press Shift+Enter to execute the cell\n",
+    "x=3+2*2\n",
+    "x"
    ]
   },
   {
@@ -1400,11 +1566,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your code below. Don't forget to press Shift+Enter to execute the cell"
+    "# Write your code below. Don't forget to press Shift+Enter to execute the cell\n",
+    "y=(3+2)*2\n",
+    "y"
    ]
   },
   {
@@ -1427,11 +1606,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your code below. Don't forget to press Shift+Enter to execute the cell"
+    "# Write your code below. Don't forget to press Shift+Enter to execute the cell\n",
+    "z=x+y\n",
+    "z"
    ]
   },
   {
@@ -1491,7 +1683,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -1505,7 +1697,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
