--- a/notebooks/BAE305_Python_HW_Notebook/PY0101EN-1-2-Strings.ipynb
+++ b/notebooks/BAE305_Python_HW_Notebook/PY0101EN-1-2-Strings.ipynb
@@ -812,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -884,8 +884,7 @@
     "A=1\n",
     "B=2\n",
     "\n",
-    "C = A + B\n",
-    "\n"
+    "C = A + B\n"
    ]
   },
   {
@@ -915,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -964,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -981,7 +980,7 @@
     "# Write your code below and press Shift+Enter to execute\n",
     "\n",
     "E = 'clocrkr1e1c1t'\n",
-    "print(E[::2])"
+    "print(E[::2])\n"
    ]
   },
   {
@@ -1011,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -1057,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -1068,7 +1067,7 @@
        "'YOU ARE WRONG'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1107,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -1118,7 +1117,7 @@
        "95"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1152,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -1163,7 +1162,7 @@
        "'Bob had a little lamb Little lamb, little lamb Bob had a little lamb Its fleece was white as snow And everywhere that Bob went Bob went, Bob went Everywhere that Bob went The lamb was sure to go'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
