--- a/notebooks/BAE305_Python_HW_Notebook/PY0101EN-2-1-Tuples.ipynb
+++ b/notebooks/BAE305_Python_HW_Notebook/PY0101EN-2-1-Tuples.ipynb
@@ -941,20 +941,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "('pop', 'rock')"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'genres_tuple' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Write your code below and press Shift+Enter to execute\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[43mgenres_tuple\u001b[49m[\u001b[32m0\u001b[39m:\u001b[32m2\u001b[39m]\n",
+      "\u001b[31mNameError\u001b[39m: name 'genres_tuple' is not defined"
+     ]
     }
    ],
    "source": [
