--- a/notebooks/BAE305_Python_HW_Notebook/PY0101EN-2-2-Lists.ipynb
+++ b/notebooks/BAE305_Python_HW_Notebook/PY0101EN-2-2-Lists.ipynb
@@ -687,13 +687,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 'hello', [1, 2, 3], True]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your code below and press Shift+Enter to execute"
+    "# Write your code below and press Shift+Enter to execute\n",
+    "a_list= [1, 'hello', [1,2,3], True]\n",
+    "a_list\n"
    ]
   },
   {
@@ -717,13 +730,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hello'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your code below and press Shift+Enter to execute"
+    "# Write your code below and press Shift+Enter to execute\n",
+    "a_list[1]"
    ]
   },
   {
@@ -746,13 +771,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['hello', [1, 2, 3], True]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your code below and press Shift+Enter to execute"
+    "# Write your code below and press Shift+Enter to execute\n",
+    "a_list[1:4]\n"
    ]
   },
   {
@@ -775,13 +812,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 'a', 2, 1, 'd']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your code below and press Shift+Enter to execute"
+    "# Write your code below and press Shift+Enter to execute\n",
+    "A=[1,'a']\n",
+    "B=[2,1,'d']\n",
+    "A+B"
    ]
   },
   {
@@ -863,7 +914,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
