--- a/notebooks/BAE305_Python_HW_Notebook/PY0101EN-2-3-Dictionaries.ipynb
+++ b/notebooks/BAE305_Python_HW_Notebook/PY0101EN-2-3-Dictionaries.ipynb
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,9 @@
     "# Question sample dictionary\n",
     "\n",
     "soundtrack_dic = {\"The Bodyguard\":\"1992\", \"Saturday Night Fever\":\"1977\"}\n",
-    "soundtrack_dic "
+    "soundtrack_dic \n",
+    "\n",
+    "soundtrack_dic.keys() # The Keys \"The Bodyguard\" and \"Saturday Night Fever\"\n"
    ]
   },
   {
@@ -418,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -427,13 +429,18 @@
        "dict_keys(['The Bodyguard', 'Saturday Night Fever'])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Write your code below and press Shift+Enter to execute"
+    "# Write your code below and press Shift+Enter to execute\n",
+    "\n",
+    "soundtrack_dic = {\"The Bodyguard\":\"1992\", \"Saturday Night Fever\":\"1977\"}\n",
+    "soundtrack_dic \n",
+    "\n",
+    "soundtrack_dic.keys() # The Keys \"The Bodyguard\" and \"Saturday Night Fever\"\n"
    ]
   },
   {
@@ -456,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -465,13 +472,15 @@
        "dict_values(['1992', '1977'])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Write your code below and press Shift+Enter to execute"
+    "# Write your code below and press Shift+Enter to execute\n",
+    "\n",
+    "soundtrack_dic.values() # The values are \"1992\" and \"1977\"\n"
    ]
   },
   {
@@ -515,13 +524,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# Write your code below and press Shift+Enter to execute"
+    "# Write your code below and press Shift+Enter to execute\n",
+    "album_sales_dict= {\"The Bodyguard\":50, \"Back in Black\":50, \"Thriller\":65}\n"
    ]
   },
   {
@@ -544,13 +554,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "65"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your code below and press Shift+Enter to execute"
+    "# Write your code below and press Shift+Enter to execute\n",
+    "album_sales_dict[\"Thriller\"]"
    ]
   },
   {
@@ -573,13 +595,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['The Bodyguard', 'Back in Black', 'Thriller'])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your code below and press Shift+Enter to execute"
+    "# Write your code below and press Shift+Enter to execute\n",
+    "album_sales_dict.keys()"
    ]
   },
   {
@@ -602,13 +636,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_values([50, 50, 65])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your code below and press Shift+Enter to execute"
+    "# Write your code below and press Shift+Enter to execute\n",
+    "album_sales_dict.values()"
    ]
   },
   {
@@ -674,7 +720,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -688,7 +734,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
