--- a/notebooks/BAE305_Python_HW_Notebook/PY0101EN-3-3-Functions.ipynb
+++ b/notebooks/BAE305_Python_HW_Notebook/PY0101EN-3-3-Functions.ipynb
@@ -1039,11 +1039,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write your code below and press Shift+Enter to execute"
+    "# Write your code below and press Shift+Enter to execute\n",
+    "def div(a,b):\n",
+    "    return(a/b)"
    ]
   },
   {
@@ -1093,11 +1095,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your code below and press Shift+Enter to execute"
+    "# Write your code below and press Shift+Enter to execute\n",
+    "def con(a, b):\n",
+    "    return(a + b)\n",
+    "\n",
+    "con(2,2)"
    ]
   },
   {
@@ -1128,11 +1145,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a', 1, 'b', 1]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Write your code below and press Shift+Enter to execute"
+    "# Write your code below and press Shift+Enter to execute\n",
+    "con(['a',1],['b',1])"
    ]
   },
   {
@@ -1199,7 +1228,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -1213,7 +1242,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
